updated to mentors

--- a/_config.yml
+++ b/_config.yml
@@ -75,8 +75,8 @@ latestNewsTitle: "Latest news"
 # Rockstar Speakers Block
 rockstarSpeakersImage: "rockstar-speakers.jpg"
 rockstarSpeakersCount: 4
-rockstarSpeakersTitle: "Rockstar speakers"
-rockstarSpeakersButtonText: "See all speakers"
+rockstarSpeakersTitle: "Rockstar Mentots"
+rockstarSpeakersButtonText: "See all Mentors"
 
 # Location Block
 locationBlockTitle: "Location"
