--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ latestNewsTitle: "Latest news"
 # Rockstar Speakers Block
 rockstarSpeakersImage: "rockstar-speakers.jpg"
 rockstarSpeakersCount: 4
-rockstarSpeakersTitle: "Rockstar Mentots"
+rockstarSpeakersTitle: "Rockstar Mentors"
 rockstarSpeakersButtonText: "See all Mentors"
 
 # Location Block
@@ -110,7 +110,6 @@ twitterHashTag: "devfest"
 twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=900"
 
 # Partners Block
-organizersTitle: "Organizers"
 partnersTitle: "Partners"
 partnersC4sponsorsButton: "Become a sponsor"
 
