--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -2,4 +2,4 @@
   group: "General sponsor"
   elements: 
     - {name: "Google", description: "Google", link: "https://www.google.com.ua/intl/en/about/", imageUrl: "google.svg"}
-    - {name: "GDG Lviv", description: "GDG Lviv - Open and volunteer geek community", link: "http://lviv.gdg.org.ua", imageUrl: "gdg-lviv.svg"}
+    - {name: "Cabot Solutions", description: "Cabot Solutions - Innovation to the core", link: "http://cabotsolutions.com", imageUrl: "cabot_logo.png"}
